files/style.css
body, input, button {
    font-family: 'VT323', monospace;
	font-size: 16px;
}

main {
	text-align: center;
	max-width: 300px;
	margin: auto;
	margin-top: 16px;
}

main input, main button {
	width: -webkit-fill-available;
	width: -moz-available;
	width: fill-available;
}

.stats {
	position: fixed;
	left: 16px; top: 16px;
	background: #ddd;
	border: 2px solid #999;
    font-family: 'VT323', monospace;
	font-size: 16px;
	border-collapse: collapse;
}

.stats td {
	padding: 4px 8px;
}

.stats.right {
	left: auto;
	right: 16px;
}

.stats.bottom {
	top: auto;
	bottom: 16px;
}

body {
	padding: 0; margin: 0;
	padding: 32px;
}

.map {
	border: 4px solid;
	background: #fafafa;
	border-collapse: collapse;
	margin: auto;
}

.map .tile {
	width: 32px;
	height: 32px;
	padding: 0;
	text-align: center;
    font-family: 'VT323', monospace;
	color: rgba(0,0,0,0.5);
	background: var(--territory);
}

.map .tile .inner {
	font-size: 12px;

	width: 32px;
	height: 24px;
	padding-top: 8px;

	position: relative;
	z-index: 2;
	color: #000;
}

.map .deposit-iron {
	background: url(/iron.svg) var(--territory);
}
.map .deposit-copper {
	background: url(/copper.svg) var(--territory);
}
.map .deposit-gold {
	background: url(/gold.svg) var(--territory);
}
.map .deposit-uranium {
	background: url(/uranium.svg) var(--territory);
}

[data-territory="0"] {
	--territory: #ffd4cc;
}
[data-territory="1"] {
	--territory: #ddffcc;
}
[data-territory="2"] {
	--territory: #ccddff;
}
.map .tile[data-territory="-1"] {
	--territory: transparent;
}

.map .tile.tile-selected {
	outline: 2px solid rgba(0,0,0,0.3);
}

.map .tile[data-tiletype="core"] .inner {
	background: url(/core.svg); }
.map .tile[data-tiletype="camp"] .inner {
	background: url(/camp.svg); }
.map .tile[data-tiletype="kiln"] .inner {
	background: url(/kiln.svg); }
.map .tile[data-tiletype="mine1"] .inner {
	background: url(/mine1.svg); }
.map .tile[data-tiletype="mine2"] .inner {
	background: url(/mine2.svg); }
.map .tile[data-tiletype="mine3"] .inner {
	background: url(/mine3.svg); }
.map .tile[data-tiletype="brick-wall"] .inner {
	background: url(/brick-wall.svg);
	color: #fff; }
.map .tile[data-tiletype="copper-wall"] .inner {
	background: url(/copper-wall.svg);
	color: #fff; }
.map .tile[data-tiletype="iron-wall"] .inner {
	background: url(/iron-wall.svg);
	color: #fff; }
.map .tile[data-tiletype="launcher"] .inner {
	background: url(/launcher.svg); }
.map .tile[data-tiletype="cleaner"] .inner {
	background: url(/cleaner.svg); }

kbd {
    font-family: 'VT323', monospace;
	background: #bbb;
	display: inline-block;
	padding: 0 4px;
}

.text-copper {
	color: #b87333;
}

.text-brick {
	color: #b74933;
}

.text-iron {
	color: #666;
}

.text-gold {
	color: #b7b033;
}

.text-uranium {
	color: #8239cc;
}

#players tr {
	background: var(--territory);
	color: rgba(0,0,0,0.65);
}

#launcher {
	position: fixed;
	left: 16px;
	top: 248px;
}

button, .button {
	color: #000;
	text-decoration: none;
	border: 2px solid #999;
	background: #ddd;
	cursor: pointer;
    font-family: 'VT323', monospace;
	font-size: 16px;
	padding: 4px 8px;
}

#notification-box {
	position: fixed;
	bottom: 16px;
	right: 16px;
	z-index: 3;
}

.notification {
	display: block;
	min-width: 200px;
	padding: 8px 16px;
	background: #444;
	border: 2px solid #111;
	color: #ddd;
	margin-top: 16px;
}

.notification.big {
	position: fixed;
	font-size: 24px;

	height: 32px;
	width: 400px;
	z-index: 3;
	text-align: center;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;

	margin: auto;
}

.notification .close {
	display: inline-block;
	cursor: pointer;
	border-radius: 2px;
	padding: 0 4px;
	float: right;
}

.notification .close:active {
	background: #aaa;
}

